Mac Attack
Riverboat Gambler PA-7 (using L-1 sound now, might still be too new, but better than L-2 anyhow)
Tales of the Arabian Nights 0.4 Prototype (see above)

Clones:
A.G. Soccer-Ball & Football R18u with 2.5L Sound (only the latter is new, 2.4 revision, inside the ROM it says 2.5L though)
Bad Cats LG-4
Big Game (MOD rev. 9)
Bushido (alternate set B)
Cheech & Chong: Road-Trip'pin (Harley-Davidson unofficial MOD)
Dragonfist (MOD 14)
Faeton (6 digits)
Flintstones, The LA-5
Hardbody (rev. D) (the newest we have, only a few diagnostic lamp / switch names were corrected compared to rev. C)
Hook 4.06 (English)
Jurassic Park 3.07
Lightning (Free Play & MOD rev. 19)
Lucky Draw (alternate version - only difference is the #3 ROM)
Mach 2 (alternate set)
Meteor (Bonus Count Fix, MOD, Free Play rev. 66
Meteor (Bonus Count Fix, MOD, 7-Digit, Free Play rev. 76)
Monte Carlo (French Millions option, Free Play)
Monte Carlo (German Millions option, Free Play)
Monte Carlo (rev. 2 Millions option, Free Play)
MotorDome (rev. B)
No Fear 0.8X with SL-1 Sound
Quicksilver (Free Play & modified rules rev. 07D)
Silverball Mania (Horseshoe Spot MOD rev. 13)
Silverball Mania (Horseshoe No Spotting MOD rev. 13)
Theatre of Magic 1.2A
Waterworld (rev. 5) (which makes this the newest we have :))



Version 3.3 (December 24th, 2020) - "20 years already?"
------------------------------------------------------------------------------

Compiling for mac/iOS is now possible.
Also a new platform independent lib/dll is now available with a new, simple interface to request (some of) the internal data.
Fix -listxml for strings that contain embedded tags

pinPROC : updated library;  VS2019 build
YAML-cpp: updated to 0.6.3; VS2019 build

Updated LISY support to 5.26-41 (Linux for Gottlieb System1 & System80, Bally, Atari, Williams and 'HOme' Pinballs)
