@@ -46,6 +46,7 @@ A.G. Soccer-Ball & Football R18u with 2.5L Sound (only the latter is new, 2.4 re
 Bad Cats LG-4
 Big Game (MOD rev. 9)
 Bushido (alternate set B)
+Catacomb (No Bagatelle)
 Cheech & Chong: Road-Trip'pin (Harley-Davidson unofficial MOD)
 Dragonfist (MOD 14)
 Faeton (6 digits)
